Opened and colosed it no it works.

--- a/2021COSPROJECT/Form3.resx
+++ b/2021COSPROJECT/Form3.resx
@@ -121,7 +121,7 @@
     <value>A game made with advanced c sharp techniques for a computer sccience assesment.
 This game is for fun and for school intended for a school audience with some 
 cypepunk elements.Element of futureproofing and accesability is built in with a
-empthasis on usability.
+emphasis on usability.
 </value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
